src/components/primaryBtn/PrimaryBtn.css
.custom-button{
    width: 300px;
    height: 52px;
    border-radius: var(--border-rad-comp);
    cursor: pointer;
    font-size: 16px;
    font-weight: 600;
}

.signin{
    background-color: var(--bg-purple-light);
    border: var(--border-1);
    color: var(--compSurface-light);
}

.signup{
    background-color: var(--bg-soft-purple-light);
    border: 2px solid black;
}

